--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "scripts": {
     "start": "nf start",
     "backend": "nodemon backend/bin/server",
-    "frontend": "parcel frontend/src/index.html",
+    "frontend": "parcel frontend/dist/index.html",
     "dev": "nodemon ./bin/server"
   },
-  "author": "",
+  "author": "Csillag",
   "license": "ISC",
   "keywords": [],
-  "description": ""
+  "description": "Node, SQL, React, and More"
 }
