--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "dependencies": {
     "eslint": "^5.15.1",
-    "foreman": "^3.0.1"
+    "foreman": "^3.0.1",
+    "react": "^16.8.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
