--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,4 +1,10 @@
 {
-    "plugins":["transform-class-properties","transform-object-rest-spread","@babel/plugin-proposal-class-properties"],
-    "presets": ["@babel/preset-env","@babel/preset-react"],
+    "plugins": [
+        ["@babel/plugin-proposal-class-properties",
+        {"@babel/plugin-proposal-object-rest-spread"}],
+    ],
+    "presets": [
+       [ "@babel/preset-env",
+        {"@babel/preset-react"}],
+    ]
 }
