--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html",
+    "dev": "npm run start"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
     "@babel/preset-env": "^7.3.4",
     "components": "^0.1.0",
     "core-js": "^2.6.5",
+    "history": "^4.7.2",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
@@ -25,10 +27,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
     "parcel-bundler": "^1.12.0"
