--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,13 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
-    "pg": "^7.8.2"
+    "pg": "^7.8.2",
+    "uuid": "^3.3.2"
   }
 }
