--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,10 +1,11 @@
 {
     "plugins": [
-        ["@babel/plugin-proposal-class-properties",
-        {"@babel/plugin-proposal-object-rest-spread"}],
+        ["@babel/plugin-proposal-class-properties", {}, "@babel/plugin-proposal-object-rest-spread"],
     ],
+  
     "presets": [
-       [ "@babel/preset-env",
-        {"@babel/preset-react"}],
+        ["@babel/env", 
+        "@babel/react"]
     ]
+    
 }
